Fix header background color on mobile screens

--- a/src/themes/dspace/app/navbar/navbar.component.scss
+++ b/src/themes/dspace/app/navbar/navbar.component.scss
@@ -1,13 +1,6 @@
 nav.navbar {
-  align-items: baseline;
-
-  .navbar-inner-container {
-    border-top: 1px var(--ds-header-navbar-border-top-color) solid;
-  }
-}
-
-.navbar-nav {
   background-color: var(--ds-navbar-bg);
+  align-items: baseline;
 }
 
 /** Mobile menu styling **/
@@ -20,8 +13,9 @@ nav.navbar {
     height: 0;
     z-index: var(--ds-nav-z-index);
     &.open {
-      height: 100vh; //doesn't matter because wrapper is sticky
-      border-bottom: 5px var(--ds-header-navbar-border-bottom-color) solid; // open navbar covers header-navbar-wrapper border
+      height: auto;
+      min-height: 100vh;
+      border-bottom: 5px var(--ds-header-navbar-border-bottom-color) solid;
     }
   }
 }
@@ -54,8 +48,8 @@ a.navbar-brand img {
   max-height: var(--ds-header-logo-height);
 }
 
-.navbar-nav {
-  ::ng-deep a.nav-link {
+.navbar-nav ::ng-deep {
+  a.nav-link, .btn.nav-link {
     color: var(--ds-navbar-link-color);
 
     &:hover, &:focus {
